--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,7 +11,7 @@
   <% end %>
 
 
-  <form action="<%= api_users_url %>" method="post">
+  <form action="<%= users_url %>" method="post">
     <p>
       <label>Username:
         <input type="text" name="user[username]" value="<%= value_name %>">
