Add user and transaction views

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <div>
   <h1><%= @user.username %></h1>
-  <a href="<%= users_url %>">All Users</a>
+  <h1>Balance: <%= @user.balance%></h1>
+  <a href="<%= users_url %>"><-All Users</a>
 </div>
