--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,8 @@
 <h1>All Users</h1>
-<div>
+<ul>
   <% @users.each do |u| %>
-    <a href="<%= user_url(u) %>"><%= u.username %></a>
+    <li><a href="<%= user_url(u) %>"><%= u.username %></a></li>
   <% end %>
-</div>
+</ul>
 
-<a href="<%= new_user_url %>">New User</a>
+<a href="<%= new_user_url %>">New User-></a>
