Add basic styling

--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,3 +1,7 @@
+<nav class="new-transaction-nav">
+  <a href="<%= transactions_url %>"><-Transaction Index</a>
+</nav>
+
 <div>
   <p><%= flash[:errors] %></p>
   <h2>Input Transaction Details</h2>
@@ -25,5 +29,3 @@
     </p>
   </form>
 </div>
-
-<a href="<%= transactions_url %>"><-Transaction Index</a>
