--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+  width: 600px;
+  margin: 0 auto;
+}
+
+body > *{
+  background-color: rgb(234,235,239);
+}
