--- a/app/assets/stylesheets/transactions.scss
+++ b/app/assets/stylesheets/transactions.scss
@@ -1,3 +1,49 @@
 // Place all the styles related to the transactions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+nav {
+  width: 100%;
+  height: 50px;
+  background-color: rgb(76,112,177);
+}
+
+nav > a {
+  margin: 40px;
+  color: white;
+  font-weight: 900;
+  letter-spacing: 2px;
+}
+
+nav > a:hover {
+  color: greenyellow;
+}
+
+nav.transaction-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(76,112,177);
+}
+
+nav.new-transaction-nav {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: rgb(76,112,177);
+}
+
+nav.user-nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: rgb(76,112,177);
+}
+
+nav.new-user-nav {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: rgb(76,112,177);
+}
+
