--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,8 @@
+<nav class="new-user-nav">
+  <a href="<%= users_url %>"><-All Users</a>
+</nav>
+
 <div>
   <h1><%= @user.username %></h1>
   <h1>Balance: <%= @user.balance%></h1>
-  <a href="<%= users_url %>"><-All Users</a>
 </div>
